<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐娱炉石助手</string>
    <string name="action_search">search</string>
    <string name="action_share">share</string>

    <!-- 反馈 -->
    <string name="feedback_detail">请尽量详细描述你的问题或建议。如有错误、无效连接，请反馈页面地址给我们，谢谢。</string>
    <string name="feedback_phone">例如小米2</string>
    <string name="feedback_contact">QQ/Email/Tel</string>
    <string name="feedback_commit">提交</string>
    <string name="txt_problem_description">问题描述:</string>
    <string name="txt_problem_description1">*请填问题描述</string>
    <string name="txt_feedback_contact">联系方式:</string>
    <string name="txt_feedback_contact_txt">手机型号:</string>
    <string name="launch_start_app_btn_txt">进入APP主界面</string>
    <string name="launch_app_version_txt">v</string>

    <!-- 视频搜索结果 -->
    <string name="search_newst">最新上传</string>
    <string name="search_hottest">最多播放</string>
    <string name="search_result_no">暂无搜索历史</string>
    <string name="search_hint">请输入您要搜索的内容</string>
    <string name="search_hint_null">抱歉，没有搜索到您要的结果！</string>

    <!-- 炉石传说攻略 -->
    <string name="hsnews_ngc">炉石攻略</string>

    <!-- 视频详细 -->
    <string name="detail_author">作者：</string>
    <string name="detail_play">播放：</string>
    <string name="detail_lable">标签：</string>
    <string name="detail_content">作品介绍：</string>

    <!-- popupwindow -->
    <string name="pop_title">炉石传说视频分类</string>

    <!-- 评论 -->
    <string name="comment_publish">发表</string>
    <string name="comment_tips">还没人评论，赶紧评论吧！</string>
    <string name="comment_toast_tips">请输入评论内容</string>
    <string name="comment_win">评论成功</string>
    <string name="comment_lose">评论失败</string>

    <!-- 炉石传说首页 -->
    <string name="hs_tips_recommed">小编推荐</string>
    <string name="hs_hot_play">今日热播</string>

    <!-- 分享 -->
    <string name="menu_share">分享到：</string>

    <!-- 反馈 -->
    <string name="feedback_detail_tips">问题描述不能为空</string>
    <string name="feedback_model_tips">手机型号不能为空</string>
    <string name="feedback_phone_tips">联系方式不能为空</string>
    <string name="feedback_commit_tips">提交成功</string>

    <!-- 友盟统计 -->
    <string name="umeng_key">53b2179156240b88e8096034</string>
    <string name="umeng_channeLname">手机型号不能为空</string>

    <!-- action title -->
    <string name="login">乐娱帐号登录</string>
    <string name="zone">个人中心</string>
    <string name="search">搜索</string>
    <string name="veido_search">视频搜索</string>
    <string name="leyu_video">乐娱视频</string>
    
    <!--登录  -->
<string name = "login_null">帐号或密码不能为空</string>
<string name = "login_error">帐号或密码错误</string>
<string name = "login_user">邮箱/用户名：</string>
<string name = "login_ps">密码：</string>
<string name = "login_btn">登录</string>
</resources>