<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_gray" >

    <TextView
        android:id="@+id/act_feed_tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_et_detail"
        android:layout_below="@+id/act_feed_et_detail"
        android:text="@string/txt_problem_description1"
        android:textColor="#FD2B2B" />

    <com.ch.leyu.widget.view.ClearEditText
        android:id="@+id/act_feed_et_detail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/act_feed_tv_ask"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_edittext_bg"
        android:ems="10"
        android:hint="@string/feedback_detail" />

    <TextView
        android:id="@+id/act_feed_tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_tv_phone"
        android:layout_below="@+id/act_feed_et_phone"
        android:layout_marginTop="24dp"
        android:text="@string/txt_feedback_contact"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_feed_et_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/commit_selector"
        android:text="@string/feedback_commit" />

    <com.ch.leyu.widget.view.ClearEditText
        android:id="@+id/act_feed_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_tv_detail"
        android:layout_alignRight="@+id/act_feed_et_detail"
        android:layout_below="@+id/act_feed_tv_phone"
        android:background="@drawable/login_edittext_bg"
        android:ems="10"
        android:hint="@string/feedback_phone" />

    <com.ch.leyu.widget.view.ClearEditText
        android:id="@+id/act_feed_et_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_et_phone"
        android:layout_alignRight="@+id/act_feed_et_phone"
        android:layout_below="@+id/act_feed_tv_contact"
        android:background="@drawable/login_edittext_bg"
        android:ems="10"
        android:hint="@string/feedback_contact" />

    <TextView
        android:id="@+id/act_feed_tv_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_et_detail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/txt_problem_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/act_feed_tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/act_feed_et_phone"
        android:layout_below="@+id/act_feed_tv_detail"
        android:layout_marginTop="18dp"
        android:text="@string/txt_feedback_contact_txt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>